# future-contest-2022-qual-a

./: .gitignore  Cargo.toml  README.md  runner.py
src/: main.rs
