[package]
name = "future-contest-2022-qual-a"
version = "0.1.0"
authors = ["yaumu3 <yumu@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }
rand_pcg = "=0.2.1"
